enable to decrypt data

--- a/src/front/src/index.html
+++ b/src/front/src/index.html
@@ -29,15 +29,15 @@
       <button type="submit" id="submit_plaintext" disabled="true">Encrypt with symmetric key</button>
     </form>
     <section id="encrypt_result"></section>
-    <form action="#" id="decrypt_form">
-      <label for="ciphertext">Cipher Data:</label>
-      <input type="text" id="ciphertext"><br><br>
-      <button type="submit" id="submit_ciphertext" disabled="true">Decrypt with symmetric key</button>
-    </form>
     <form action="#" id="set_value_form">
       <button type="submit" id="submit_set_value" disabled="true">Set the cipher data</button>
     </form>
     <section id="set_value_result"></section>
+    <form action="#" id="decrypt_form">
+      <!-- <label for="ciphertext">Cipher Data:</label>
+      <input type="text" id="ciphertext"><br><br> -->
+      <button type="submit" id="submit_decript" disabled="true">Get and decrypt with symmetric key</button>
+    </form>
     <section id="decrypt_result"></section>
     <hr />
     <img src="logo2.svg" id="builtonchainlogo" />
