--- a/src/front/src/index.html
+++ b/src/front/src/index.html
@@ -13,10 +13,10 @@
 <body>
   <main>
     <h1 id="vetkddemo">Secret Oracle Demo</h1>
-    <form id="login_form">
+    <!-- <form id="login_form">
       <label for="login" id="principal"></label>
       <button id="login">Login (optional)</button>
-    </form>
+    </form> -->
     <hr />
     <h2 id="symmetric_encryption_demo">Encryption with symmetric (AES-GCM-256) key</h1>
     <form action="#" id="get_symmetric_key_form">
