--- a/src/front/src/index.html
+++ b/src/front/src/index.html
@@ -13,32 +13,26 @@
 <body>
   <main>
     <h1 id="vetkddemo">Secret Oracle Demo</h1>
-    <!-- <form id="login_form">
-      <label for="login" id="principal"></label>
-      <button id="login">Login (optional)</button>
-    </form> -->
     <hr />
     <h2 id="symmetric_encryption_demo">Encryption with symmetric (AES-GCM-256) key</h1>
     <form action="#" id="get_symmetric_key_form">
       <button type="submit">Fetch symmetric key for local usage</button>
     </form>
-    <section id="get_symmetric_key_result"></section>
+    <div id="get_symmetric_key_result"></div>
     <form action="#" id="encrypt_form">
-      <label for="plaintext">Plain Data:</label>
+      <label for="plaintext">Raw Data:</label>
       <input type="text" id="plaintext"><br><br>
       <button type="submit" id="submit_plaintext" disabled="true">Encrypt with symmetric key</button>
     </form>
-    <section id="encrypt_result"></section>
+    <div id="encrypt_result"></div>
     <form action="#" id="set_value_form">
       <button type="submit" id="submit_set_value" disabled="true">Set the cipher data</button>
     </form>
-    <section id="set_value_result"></section>
+    <div id="set_value_result"></div>
     <form action="#" id="decrypt_form">
-      <!-- <label for="ciphertext">Cipher Data:</label>
-      <input type="text" id="ciphertext"><br><br> -->
       <button type="submit" id="submit_decript" disabled="true">Get and decrypt with symmetric key</button>
     </form>
-    <section id="decrypt_result"></section>
+    <div id="decrypt_result"></div>
     <hr />
     <img src="logo2.svg" id="builtonchainlogo" />
   </main>
